# olxpl_listingscraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  admin.py  advisor.py  config.py  copilot-mcp-config.json  copilot_proxy_server.js  db.py  docker-compose.yml  formatters.py  gemini_proxy_server.js  handlers.py  i18n.py  jobs.py  llm.py  location_filter.py  main.py  olx_categories.json  pyproject.toml  requirements.txt  scraper.py  start_gemini_proxy.sh  start_proxy.sh  url_builder.py
.github/workflows/: ci.yml  deploy.yml
locales/: en.json  pl.json  ru.json  uk.json
olx-db-ext/: gemini-extension.json  package-lock.json  package.json  server.js
tests/: test_db.py  test_formatters.py  test_llm.py  test_location_filter.py  test_scraper.py  test_url_builder.py
